<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_bg">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp" />

    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_start"
            android:textSize="20sp"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnLevels"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_levels"
            android:textSize="20sp"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_settings"
            android:textSize="20sp"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_exit"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
