<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_bg">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_levels"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <LinearLayout
        android:id="@+id/levelButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnLevel1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/level_1"
            android:textSize="20sp"
            android:layout_marginEnd="24dp" />

        <Button
            android:id="@+id/btnLevel2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/level_2"
            android:textSize="20sp"
            android:layout_marginEnd="24dp" />

        <Button
            android:id="@+id/btnLevel3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/level_3"
            android:textSize="20sp"
            android:layout_marginEnd="24dp" />

        <Button
            android:id="@+id/btnNight1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="夜间 1"
            android:textSize="20sp"
            android:layout_marginEnd="24dp" />

        <Button
            android:id="@+id/btnFrost1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="冰霜 1"
            android:textSize="20sp"
            android:layout_marginEnd="24dp" />

        <Button
            android:id="@+id/btnBoss1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="BOSS 1"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
